[build-system]
build-backend = "cmeel"
requires = ["cmeel-texinfo", "cmeel[build]"]

[project]
description = "cmeel distribution for help2man"
license = "GPL-3.0-only"
name = "cmeel-help2man"
requires-python = ">= 3.8"
version = "1.49.3"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-help2man"
repository = "https://github.com/cmake-wheel/cmeel-help2man.git"
upstream = "https://www.gnu.org/software/help2man/"

[tool.cmeel]
build-number = 1
has-sitelib = false
run-tests = false

[tool.tomlsort]
all = true
